@startuml
' UML Progetto
' Linguaggio: JavaScript, HTML, CSS

skinparam classAttributeIconSize 0
class Gioco {
    difficolta: Difficolta
    modalita: Modalita
    parole: Parole
    arrayListaParole: String[][]
    arrayGioco:String[][]
    arrayControlloNumeri: String[][]
    arrayColori:String[]
    arrayPosizioni:String[]
    arraySoluzione:String[][]
    numeroSoluzione:int

    scaricaInTxt()
    scaricaInHTML()
    creaArray()
    prendereSpaziVuoti()
    prendereParolaMagica()
    inserisciParolaMagica()
    puoiDareParolaMagica()
    InData()
    controllaParolaInGriglia()
    riempiSpazi()
    inserimentoDatiFinale()
    inserisciDati()
    controlloFinale()
    controlloArray()
    prendereDirezione()
    prenderePosizioneParola()
    stampaTabella()
    stampaTabellaTXT()
    stampaTabellaHTML()
    stampaLista()
    stampaSoluzione()
    formattaNumeroColore()
    eDifferenteColore()
    generaColore()
}

class Parole{
    filePath:String
    arrayParole:String[]

    setFile()
    getArray()
    readFile()
    formatWord()
    getPossibleSolution()
    downloadFileTXT()
    downloadFileHTML()
}

class Modalita{
    modalita:String
    parolaMagica:String

    setModalita()
}

class Difficolta{
    difficolta:String
    modalita:Modalita
    grandezzaMatriceX: Number
    grandezzaMatriceY: Number
    paroleDaTrovare: Number

    setDifficolta()

}

class Font{
    font:String
    fontArray:String[]
    
    generaListaFonts()
    setFont()
}

Difficolta --> Gioco
Parole --> Gioco
Modalita --> Gioco
Modalita --> Difficolta
@enduml